Fix Reckless font on mobile
Ensures the Reckless font is correctly displayed on mobile devices by adjusting its CSS.

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
        url('/fonts/Reckless-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: fallback;
 }
 
 @font-face {
@@ -15,7 +15,7 @@
   src: url('/fonts/Reckless-Medium.otf') format('opentype');
   font-weight: 500;
   font-style: normal;
-  font-display: swap;
+  font-display: fallback;
 }
 
 @font-face {
@@ -24,7 +24,7 @@
        url('/fonts/Reckless-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
+  font-display: fallback;
 }
 
 @tailwind base;
